# libmpc

./: CMakeLists.txt  Makefile.am
include/mpc/: mpc_types.h  mpcdec.h  mpcmath.h  reader.h  streaminfo.h
libmpc/trunk/: CMakeLists.txt  Makefile.am  configure.in  libmpc.kdevelop
libmpc/trunk/common/: tags.c
libmpc/trunk/include/mpc/: mpc_types.h  mpcdec.h  reader.h  streaminfo.h
libmpc/trunk/libmpcdec/: Makefile.am  huffman.c  huffman.h  internal.h  mpc_bits_reader.h  mpc_decoder.c  mpc_demux.c  mpc_reader.c  mpcdec_math.h  requant.c  streaminfo.c
libmpc/trunk/libmpcenc/: bitstream.c  encode_sv7.c  huffsv7.c  libmpcenc.h  quant.c
libmpc/trunk/libmpcpsy/: cvd.c  fft_routines.c  profile.c  psy.c  psy_tab.c
libmpc/trunk/libwavformat/: output.c
libmpc/trunk/mpc2sv8/: CMakeLists.txt  Makefile.am  mpc2sv8.c
libmpc/trunk/mpcchap/: CMakeLists.txt  Makefile.am  iniparser.c  iniparser.h  mpcchap.c
libmpc/trunk/mpccut/: Makefile.am  mpccut.c
libmpc/trunk/mpcdec/: CMakeLists.txt  mpcdec.c
libmpc/trunk/mpcenc/: Makefile.am  config.h  mpcenc.c  mpcenc.h  wave_in.c
libmpc/trunk/mpcgain/: mpcgain.c
libmpc/trunk/r2d/: CMakeLists.txt
libmpc/trunk/r2d/include/mpc/: streaminfo.h
libmpc/trunk/r2d/libmpcdec/: ChangeLog  internal.h  mpc_bits_reader.h  requant.h
libmpc/trunk/r2d/libmpcenc/: analy_filter.c  bitstream.c
libmpc/trunk/r2d/libmpcpsy/: cvd.c
libmpc/trunk/r2d/libwavformat/: libwaveformat.h
libmpc/trunk/r2d/mpc2sv8/: mpc2sv8.c
libmpc/trunk/r2d/mpcenc/: config.h  predict.h
libmpc/trunk/r2d/win32/: libcommon.vcproj  libmpcdec.vcproj
libmpc/trunk/win32/: libcommon.vcproj  libmpcdec.vcproj  libmpcenc.vcproj  libmpcpsy.vcproj  mpc2sv8.vcproj  mpccut.vcproj  mpcdec.vcproj  mpcenc.vcproj  mpcgain.vcproj  musepack.sln
libmpcdec/: ChangeLog  Makefile.am  huffman.h  internal.h  mpc_bits_reader.h  mpc_decoder.c  mpc_demux.c  requant.h  streaminfo.c  synth_filter.c
libmpcenc/: bitstream.c  encode_sv7.c  huffsv7.c
libmpcpsy/: fft4g.c  psy_tab.c
libwavformat/: input.c
mpc2sv8/: mpc2sv8.c
mpcchap/: CMakeLists.txt  Makefile.am  mpcchap.c
mpccut/: CMakeLists.txt  mpccut.c
mpcdec/: CMakeLists.txt  mpcdec.c
mpcenc/: CMakeLists.txt  Makefile.am  config.h  mpcenc.c  mpcenc.h  tags.c
mpcgain/: CMakeLists.txt  mpcgain.c
r2d/: configure.in
r2d/include/mpc/: mpc_types.h
r2d/libmpcdec/: Makefile.am  decoder.h  mpc_bits_reader.c  mpc_decoder.c  mpcdec_math.h
r2d/libmpcenc/: encode_sv7.c  libmpcenc.h
r2d/libmpcpsy/: CMakeLists.txt  ans.c  psy.c
r2d/libwavformat/: Makefile.am
r2d/mpc2sv8/: CMakeLists.txt
r2d/mpcdec/: mpcdec.c
r2d/mpcenc/: CMakeLists.txt  Makefile.am  mpcenc.h
r2d/mpcgain/: mpcgain.c
r2d/win32/: mpcenc.sln
wavcmp/: CMakeLists.txt
win32/: dirent.c  libcommon.vcproj  libmpcdec.vcproj  libmpcenc.vcproj  libmpcpsy.vcproj  libwavformat.vcproj  mpc2sv8.sln  mpc2sv8.vcproj  mpccut.sln  mpccut.vcproj  mpcdec.sln  mpcdec.vcproj  mpcenc.vcproj  mpcgain.vcproj  musepack.sln
